frontend/src/assets/main.css
/* ... */
h2 {
  font-family: "Cinzel", serif;
  font-size: 2rem;
  letter-spacing: 1px;
  margin-bottom: .75rem;
  color: var(--vt-c-golden);
}

h3 {
  font-family: "Cinzel", serif;
  font-size: 1.25rem;
  letter-spacing: 1px;
  margin-bottom: .75rem;
  color: var(--vt-c-dark-brown);
}

h4 {
  font-family: "Cinzel", serif;
  font-size: 1.10rem;
  letter-spacing: 1px;
  margin-bottom: .75rem;
  color: var(--vt-c-dark-brown);
}

p {
  font-family: "Cinzel", serif;
  font-size: 1rem;
  letter-spacing: 1px;
  line-height: 1.6;
}

/* ------------------------------------------ Cards ------------------------------------------ */

.CardSpacing {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 35px;
  margin-bottom: 1rem;
}

.Card:hover {
  transform: scale(1.03);
  color: var(--vt-c-red);
}

.Card {
  position:relative;
  background-image: url('PaperTextureCalm.png');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  flex: 0 0 calc(25% - 20px);
  min-width: 345px;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
  padding: 30px;
  text-align: center;
  background-color: var(--vt-c-parchment);
  background-blend-mode: multiply;
  color: var(--vt-c-dark-brown);
  border: 2px solid var(--vt-c-bronze);
  text-shadow: 0 2px 2px rgba(0,0,0,0.25), 0 0 5px rgba(255,255,255,0.1);
  background: radial-gradient(
    circle at center, rgba(0, 0, 0, 0) 60%, /* center */ #ffe9b1 100% /* outside */), 
    url('PaperTextureCalm.png'
  );

   button{
    position:absolute;
    top:0;
    left:0;
    width: 100%;
    height: 100%;
    background-image: none;
    background-color: none;
    border: none;
    cursor: pointer;
    box-shadow: none;
    background: none;
    z-index:50;
  }
}

/* -------------------------------------- POPUPS ---------------------------------------------- */

.popup{
  background:transparent url('Scroll.png') no-repeat center/contain;
  aspect-ratio: 3 / 4;
  color: var(--vt-c-dark-brown);
  min-width:350px;
  max-height: 100vh;
  width: 95vw;
  margin: 40px auto;
  text-align: center;
  line-height: 1.6;
  font-size: 0.85rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
  z-index:100;

    .popuptxt {
    align-items: center;
    max-height: 77%; /* confines it to the “paper” area */
    min-height: 310px;
    box-sizing: border-box;
    overflow-y: auto;
    padding-left: 1rem;
    padding-right: 1rem;
    min-width: 305px;
    width: 80vw;
    max-width: 450px;
    margin: 0px auto;
    }
}

 .modal {
  display: flex;
  position: fixed;
  z-index: 90;
  inset: 0;
  overflow: auto;  /* Enable scroll if needed */
  justify-content: center;
  align-items: center;
  backdrop-filter: blur(3px);
  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
}

@media (max-width: 640px) {

  /*.popup {
    min-width:95vw;
    min-height:95vh;
    max-width: 100vw;
    max-height: 100vh;
  }*/

   input {
    max-width: 100% !important;
  } 
}

/* ------------------------------------ Select/Inputs ---------------------------------------- */

 select {
  background: var(--vt-c-dark-grey);
  border: 2px solid var(--vt-c-red);
  color: var(--vt-c-red);
  padding: 0.5rem 0.75rem;
  border-radius: 6px;
  font-family: "Cinzel", serif;
  transition: border-color 0.2s ease;
  margin-top: 0.5rem;
  margin-bottom: 1.5rem;
  text-shadow: 0 2px 2px rgba(0,0,0,0.25), 0 0 5px rgba(255,255,255,0.1);
}

select:focus, input:focus {
  outline: none;
  border-color: var(--accent-red);
}

input {
  padding: 5px;
  margin: 10px 0; 
  border: 1px solid var(--vt-c-bronze);
  background-color: var(--vt-c-dark-grey);
  color: var(--vt-c-red);
  border-radius: 5px;
  width: 350px;
  max-width: 600px;
}

/* ------------------------------------ Scroll Bar ---------------------------------------- */

::-webkit-scrollbar {
  width: 12px;
  height: 12px; /* for horizontal scrollbars */
}

/* Track (the background) */
::-webkit-scrollbar-track {
  background: #1e1e1e; /* dark grey */
  border-radius: 10px;
}

/* Handle (the draggable part) */
::-webkit-scrollbar-thumb {
  background: #35302f; /* lighter grey */
  border-radius: 10px;
  border: 2px solid #1e1e1e; /* small gap */
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #514c4a; /* even lighter grey when hovered */
}

/* ------------------------------------ Calendar ---------------------------------------- */

/* Calendar View CSS Overrides */
.vc-title{
  min-width: 10px !important;
  font-family: "Cinzel", serif !important;
  background: var(--vt-c-dark-grey) !important;
  border: 2px solid var(--vt-c-red) !important;
  color: var(--vt-c-red) !important;
  text-shadow: 0 2px 2px rgba(0,0,0,0.25), 0 0 5px rgba(255,255,255,0.1) !important;
}

.vc-arrow{
  min-width: 10px !important;
  font-family: "Cinzel", serif !important;
  background: var(--vt-c-dark-grey) !important;
  border: 2px solid var(--vt-c-red) !important;
  color: var(--vt-c-red) !important;
  text-shadow: 0 2px 2px rgba(0,0,0,0.25), 0 0 5px rgba(255,255,255,0.1) !important;
}

.vc-weekday {
  color: #000 !important;
}

.vc-popover-content{
  background: radial-gradient(circle at center, rgba(0, 0, 0, 0) 60%, /* center */ #ffe9b1 100% /* outside */), url('PaperTextureCalm.png') !important;
  background-blend-mode:multiply !important;
}

.vc-nav-header{
  background: radial-gradient(circle at center, rgba(0, 0, 0, 0) 60%, /* center */ #ffe9b1 100% /* outside */), url('PaperTextureCalm.png') !important;
}

.vc-nav-item{
  min-width: 10px !important;
  font-family: "Cinzel", serif !important;
  background: var(--vt-c-dark-grey) !important;
  border: 2px solid var(--vt-c-red) !important;
  color: var(--vt-c-red) !important;
  text-shadow: 0 2px 2px rgba(0,0,0,0.25), 0 0 5px rgba(255,255,255,0.1) !important;
}
/* ... */

